--- a/resources/scss/ceres/views/PageDesign/_navigation.scss
+++ b/resources/scss/ceres/views/PageDesign/_navigation.scss
@@ -152,16 +152,6 @@ body.menu-is-visible {
 					}
 				}
 			}
-			/*&.ddown>a:after {
-				border 			: none;
-				content			: "\f0da";
-				float 			: right;
-				font-family 	: FontAwesome;
-				font-size 		: 1.5rem;
-				height 			: auto;
-				padding 		: 0 .5em 0 1em;
-				width 			: auto;
-			}*/
 		}
 	}
 
@@ -213,8 +203,6 @@ body.menu-is-visible {
 					width 			: auto;
 					max-width 		: 25em;
 					min-width 		: 100%;
-					/*left 			: 50%;
-					transform 		: translateX(-50%);*/
 					word-wrap		: break-word;
 					position 		: absolute;
 
@@ -266,72 +254,73 @@ body.menu-is-visible {
 			}
 		}
 	}
-
 }
 
-nav.navbar.megamenu {
-	@include media-breakpoint-up(lg){ position : relative; }
-	#mainNavbarCollapsable ul.mainmenu {
+@include media-breakpoint-up(lg){ 
+	nav.navbar.megamenu {
+		position : relative;
+		
+		#mainNavbarCollapsable ul.mainmenu {
+			background 		: transparent;
+			display 		: flex;
+			justify-content : flex-end; 
+			width 			: 100%; 
 
-		background 		: transparent;
-		display 		: flex;
-		justify-content : flex-end; 
-		width 			: 100%; 
+			>li {
+				position : static;
 
-		>li {
-			position : static;
+				.no-touch &:hover,
+				.touch &.hover {
+					background : transparent !important; 
+					color 	   : $megamenu-btn-hover !important;  
 
-			.no-touch &:hover,
-			.touch &.hover {
-				background : transparent !important; 
-				color 	   : $megamenu-btn-hover !important;  
-
-				>ul.collapse { display : block; } 
-			}
-
-			>ul.collapse {
-				background-color: $megamenu-bg;
-				column-gap 		: .5em;
-				column-rule 	: 1px solid #dcdbd7;
-				display 		: none;
-				padding 		: 1em 0;
-				min-height		: 7em;
-				max-height		: 86vh;  
-				column-count	: 5;
-				overflow-x		: auto;
-				overflow-y		: hidden;
-
-				li {
-					display		: list-item;
-					float		: none;
+					>ul.collapse { display : block; } 
 				}
 
-				>li ul.nav-dropdown-inner {
-					background-color	: $megamenu-bg;
-					padding-bottom		: 1em;
+				>ul.collapse {
+					background-color: $megamenu-bg;
+					column-gap 		: .5em;
+					column-rule 	: 1px solid #dcdbd7;
+					display 		: none;
+					padding 		: 1em 0;
+					min-height		: 7em;
+					max-height		: 86vh;  
+					column-count	: 5;
+					overflow-x		: auto;
+					overflow-y		: hidden;
 
-					>li {
-						padding	: 0 1.5em;
-						line-height		: 170%;
-						text-align		: left;
-	
-						&.bt-more>a {
-							color 			: $megamenu-btn-more;
-							text-transform 	: lowercase; 
-						}
-						>a {
-							color	: $megamenu-color-bottom-btn;
-							padding	: 0;
-						}
+					li {
+						display		: list-item;
+						float		: none;
 					}
-					.level1 { 
-						>a {								
-							color		: $megamenu-color-top-btn; 
-							font-weight	: bold; 
+
+					>li ul.nav-dropdown-inner {
+						background-color	: $megamenu-bg;
+						padding-bottom		: 1em;
+
+						>li {
+							padding	: 0 1.5em;
+							line-height		: 170%;
+							text-align		: left;
+		
+							&.bt-more>a {
+								color 			: $megamenu-btn-more;
+								text-transform 	: lowercase; 
+							}
+							>a {
+								color	: $megamenu-color-bottom-btn;
+								padding	: 0;
+							}
 						}
-					}
-					.level3 { 
-						padding-left	: 2.5em;
+						.level1 { 
+							>a {								
+								color		: $megamenu-color-top-btn; 
+								font-weight	: bold; 
+							}
+						}
+						.level3 { 
+							padding-left	: 2.5em;
+						}
 					}
 				}
 			}
