--- a/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupGB.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupGB.twig
@@ -55,22 +55,24 @@
             </div>
         {% endif %}
 
-        <div class="col-xs-12 col-sm-4" v-if="value.addressSalutation !== 2">
-            <div class="input-unit" data-validate="text">
-                <input type="text" name="firstName" :id="'txtFirstName' + _uid" :value="value.name2" @input="emitInputEvent('name2', $event.target.value)" data-model="name2" data-autofocus>
-                <label :for="'txtFirstName' + _uid">{{ trans("Ceres::Template.addressFirstName") }}*</label>
+        {% if not ("billing_address.name1" in addressFields and "billing_address.salutation" not in addressFields) %}
+            <div class="col-xs-12 col-sm-4" v-if="value.addressSalutation !== 2">
+                <div class="input-unit" data-validate="text">
+                    <input type="text" name="firstName" :id="'txtFirstName' + _uid" :value="value.name2" @input="emitInputEvent('name2', $event.target.value)" data-model="name2" data-autofocus>
+                    <label :for="'txtFirstName' + _uid">{{ trans("Ceres::Template.addressFirstName") }}*</label>
+                </div>
             </div>
-        </div>
 
-        <div class="col-xs-12 col-sm-4" v-if="value.addressSalutation !== 2">
-            <div class="input-unit" data-validate="text">
-                <input type="text" name="lastName" :id="'txtLastName' + _uid" :value="value.name3" @input="emitInputEvent('name3', $event.target.value)" data-model="name3">
-                <label :for="'txtLastName' + _uid">{{ trans("Ceres::Template.addressLastName") }}*</label>
+            <div class="col-xs-12 col-sm-4" v-if="value.addressSalutation !== 2">
+                <div class="input-unit" data-validate="text">
+                    <input type="text" name="lastName" :id="'txtLastName' + _uid" :value="value.name3" @input="emitInputEvent('name3', $event.target.value)" data-model="name3">
+                    <label :for="'txtLastName' + _uid">{{ trans("Ceres::Template.addressLastName") }}*</label>
+                </div>
             </div>
-        </div>
+        {% endif %}
 
         {% if "billing_address.name1" in addressFields %}
-            <div class="col-xs-12 col-sm-8" v-if="value.addressSalutation === 2">
+            <div class="col-xs-12 col-sm-8" {% if "billing_address.salutation" in addressFields %}v-if="value.addressSalutation === 2"{% endif %}>
                 <div class="input-unit" data-validate="text" data-model="contactPerson">
                     <input type="text" name="lastName" :id="'txtContactPerson' + _uid" :value="value.contactPerson" @input="emitInputEvent('contactPerson', $event.target.value)">
                     <label :for="'txtContactPerson' + _uid">{{ trans("Ceres::Template.addressContactPerson") }}*</label>
