FIX use removeChild instead of remove to be compatible to internet explorer

--- a/resources/views/PageDesign/Partials/Header/Header.twig
+++ b/resources/views/PageDesign/Partials/Header/Header.twig
@@ -26,8 +26,16 @@
 
 {% set scriptId = uid() %}
 <script id="{{ scriptId }}">
-    document.getElementById("vue-app").style.marginTop = document.getElementById("page-header").getBoundingClientRect().height + 'px';
-    document.getElementById("{{ scriptId }}").remove();
+    var vueApp = document.getElementById("vue-app");
+    var pageHeader = document.getElementById("page-header");
+
+    if ( !!vueApp && !!pageHeader )
+    {
+        vueApp.style.marginTop = pageHeader.getBoundingClientRect().height + 'px';
+    }
+
+    var scriptElement = document.getElementById("{{ scriptId }}");
+    scriptElement.parentElement.removeChild(scriptElement);
 </script>
 
 <div>
