relocated direct styling from _buttons.scss to _address-select.scss and simplified class btn-only-icon-#{$bp}-down

--- a/resources/scss/ceres/views/Templates/AddressSelect/_address-select.scss
+++ b/resources/scss/ceres/views/Templates/AddressSelect/_address-select.scss
@@ -58,12 +58,9 @@
 			right: 0;
 
 			& button {
+				min-width: auto !important;
+				width: 50px;
 				height: 74px;
-
-				& i {
-					margin-left: 6px;
-					margin-top: 1px;
-				}
 			}
 		}
 
