--- a/resources/views/MyAccount/Components/BankDataSelect.twig
+++ b/resources/views/MyAccount/Components/BankDataSelect.twig
@@ -54,8 +54,8 @@
                         </li>
                     </ul>
                 </div>
-            </div><!--
-            --><div class="add-item">
+            </div>
+            <div class="add-item">
                 <button href="#" class="btn btn-primary btn-only-icon-xs-down" @click.prevent="openAddBank()">
                     <i class="fa fa-plus-square" aria-hidden="true"></i>
                     <span>{{ trans("Ceres::Template.myAccountBankAddDataTitle") }}</span>
