CHANGE ItemFilterList.twig - remove animated loading icon during rest

--- a/resources/views/ItemList/Components/Filter/ItemFilterList.twig
+++ b/resources/views/ItemList/Components/Filter/ItemFilterList.twig
@@ -8,7 +8,7 @@
         </a>
 
         <div class="collapse" :class="{in: isActive}" id="filterCollapse">
-            <div class="container-max page-content component-loading with-icon refreshing" :class="{ 'isLoading': isLoading }">
+            <div class="container-max page-content component-loading" :class="{ 'isLoading': isLoading }">
                 <div class="card-columns">
                     <item-filter v-for="facet in facets" :facet="facet" :key="facet.id"></item-filter>
                 </div>
