--- a/resources/scss/ceres/widgets/Common/_image-box-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_image-box-widget.scss
@@ -1,7 +1,8 @@
 .widget-image-box
 {
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-only(xs) {
         padding-bottom: 0 !important;
+        min-height: 10rem;
     }
 
     > img
@@ -41,12 +42,7 @@
     &.widget-image-box-fullwidth
     {
         > .widget-inner
-        {
-            @include media-breakpoint-down(sm) {
-                position: relative;
-                padding: 0;
-            }
-            
+        {   
             .widget-caption
             {
                 width: 100%;
@@ -59,7 +55,11 @@
                     width: 100%;
                     text-transform: uppercase;
 
-                    @include media-breakpoint-up(md)
+                    @include media-breakpoint-up(sm)
+                    {
+                        font-size: 3rem;
+                    }
+                    @include media-breakpoint-up(lg)
                     {
                         font-size: 4rem;
                     }
@@ -74,17 +74,14 @@
         {
             align-items: flex-end;
 
-            @include media-breakpoint-down(sm) {
+            @include media-breakpoint-only(xs) {
                 position: relative;
+                padding-top: 14%;
             }
 
             .widget-caption
             {
                 padding: 1.5rem;
-
-                @include media-breakpoint-down(sm) {
-                    margin: 0 auto;
-                }
             }
         }
     }
@@ -93,15 +90,16 @@
     {
         > .widget-inner
         {
-            @include media-breakpoint-down(sm) {
+            @include media-breakpoint-only(xs) {
                 position: relative;
-                padding: 0;
+                padding: 25% 0 0 0;
             }
 
             .widget-caption
             {
-                @include media-breakpoint-down(sm) {
+                @include media-breakpoint-only(xs) {
                     position: relative;
+                    width: 100%;
                 }
 
                 position: absolute;
@@ -216,6 +214,10 @@
         }
     }
 
+}
+
+.widget-grid .widget-image-box-fullwidth .widget-inner .widget-caption h2 {
+    font-size: 2rem;
 }
 
 /* Compatibility for IE */
