changed some button stylings

--- a/resources/scss/Ceres.scss
+++ b/resources/scss/Ceres.scss
@@ -17,6 +17,7 @@
 @import "ceres/common/typography";
 @import "ceres/common/common";
 @import "ceres/common/structure";
+@import "ceres/common/modal";
 
 //TODO's
 @import "ceres/common/buttons";
