--- a/resources/views/Customer/Components/ForgotPassword.twig
+++ b/resources/views/Customer/Components/ForgotPassword.twig
@@ -29,7 +29,7 @@
 							{{ LayoutContainer.show("Ceres::LoginOverlay.ExtendOverlayButtons") }}
 							
 							{% if currentTemplate != "tpl.login" %}
-								<button type="button" @click.prevent="cancelResetPwd" class="btn btn-secondary btn-medium btn-m-r">
+								<button type="button" @click.prevent="cancelResetPwd" class="btn btn-danger btn-medium btn-m-r">
 									<i class="fa fa-arrow-left" aria-hidden="true"></i>
 									{{ trans("Ceres::Template.loginBackToLogin") }}
 								</button>
