--- a/resources/views/MyAccount/Components/AccountSettings.twig
+++ b/resources/views/MyAccount/Components/AccountSettings.twig
@@ -49,7 +49,7 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary btn-medium btn-m-r" data-dismiss="modal" @click="clearFields">
+                            <button type="button" class="btn btn-danger btn-medium btn-m-r" data-dismiss="modal" @click="clearFields">
                                 <i class="fa fa-times" aria-hidden="true"></i> 
                                 {{ trans("Ceres::Template.myAccountCancel") }}
                             </button>
