--- a/resources/scss/ceres/views/Templates/CategoryListItem/_category-list-item.scss
+++ b/resources/scss/ceres/views/Templates/CategoryListItem/_category-list-item.scss
@@ -109,7 +109,8 @@
         padding: .5rem;
 
         .special-tag,
-        .tag{
+        .tag,
+        .badge {
             display: block;
             padding: .3em .5em .2rem;
             font-size: .9rem;
