--- a/resources/scss/ceres/views/PageDesign/_header.scss
+++ b/resources/scss/ceres/views/PageDesign/_header.scss
@@ -77,7 +77,6 @@
 	.controls-list{
 		margin-bottom: 0;
 		font-size: 0;
-		width: 100%;
 		display: flex;
 
 		&>li{
@@ -474,6 +473,8 @@
 		{
 			flex-direction: row-reverse;
 			position: relative;
+			margin-left: 0;
+			margin-right: 0;
 		}
 
 		.controls-list
