--- a/resources/views/Checkout/CheckoutView.twig
+++ b/resources/views/Checkout/CheckoutView.twig
@@ -34,7 +34,7 @@
                 <div class="row" slot-scope="checkoutComp">
                     <!-- ADDRESS SELECT -->
                     <div class="col-md-7">
-                        <div class="col-xs-12 pt-4 bg-white">
+                        <div class="col-xs-12 pt-4 pb-3 bg-white">
                             <div id="registry-form-container" class="registry-form-container main-col" data-id="0" data-status="2">
                                 {% set overrideAddressLists = LayoutContainer.show("Ceres::Checkout.AddressLists") %}
                                 {% if overrideAddressLists|trim is empty %}
