FIX modal headers

--- a/resources/views/Basket/Components/AddItemToBasketOverlay.twig
+++ b/resources/views/Basket/Components/AddItemToBasketOverlay.twig
@@ -11,11 +11,11 @@
 
                     <!-- MODAL HEADER -->
                     <div class="modal-header">
-                        <button type="button" @click="closeOverlay()" class="close" data-dismiss="modal" aria-label="Close">
+                        <div class="modal-title h5">{{ trans("Ceres::Template.singleItemAdded") }}</div>
+                        <span class="text-muted ml-auto"><span>${ timeToClose }</span>s</span>
+                        <button type="button" @click="closeOverlay()" class="close ml-0 pl-1" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
-                        <span style="float: right; margin-right: 5px; color: lightgray;"><span class="timer">${ timeToClose }</span>s</span>
-                        <div class="modal-title h5">{{ trans("Ceres::Template.singleItemAdded") }}</div>
                     </div>
                     <!-- ./MODAL HEADER -->
 
